code has been refactored using ES6

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
 
               <div
                 class="row d-flex justify-content-between align-items-center"
-              ></div>
+              >
+
+              </div>
               <button class="load-more-btn btn btn-primary d-none">Load More</button>
               <button class="load-less-btn btn btn-secondary d-none">Load Less</button>
           </div>
@@ -198,7 +200,7 @@
 </div>
 
 
-    <script type=""  src="assets/js/index.js"></script>
+    <script type="module"  src="assets/js/index.js"></script>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
